[package]
name = "upyin"
version = "0.1.0"
authors = ["Yuri Volkov <volkov.yuri.alex@gmail.com>"]
edition = "2024"

[dependencies]
fixed = "1.30.0"
fugit = "0.3.9"
heapless = "0.9.2"
pitchy = { version = "0.2.0", default-features = false, features = ["libm"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
